K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-ingress
  annotations:
    # --- CRITICAL ANNOTATIONS FOR HTTPS ---
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # 1. Attach the Certificate (Use your ARN)
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:211125592725:certificate/1e291051-c141-4e4f-b8eb-d02e9a59afaa
    # 2. Define Listeners (Both 80 and 443)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # 3. Force Redirect HTTP to HTTPS
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # --- END CRITICAL ANNOTATIONS ---
spec:
  ingressClassName: alb # <-- Correct new way
  rules:
  - host: bedrock.ngozi-opara-portfolio.com # <-- Use your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
